# nulla-hive-mind

./: .dockerignore  .gitattributes  .gitignore  AGENT_HANDOVER.md  CONTRIBUTING.md  Cursor_Claude_Handover.md  Dockerfile  Install_And_Run_NULLA.bat  Install_And_Run_NULLA.command  Install_NULLA.bat  Install_NULLA.command  Install_NULLA.sh  LICENSE  NULLA_STARTER_KIT.md  OpenClaw_NULLA.bat  OpenClaw_NULLA.command  OpenClaw_NULLA.sh  Probe_NULLA_Stack.bat  Probe_NULLA_Stack.sh  README.md  REPO_MAP.md  SECURITY.md  Stage_Trainable_Base.bat  Stage_Trainable_Base.command  Stage_Trainable_Base.sh  Start_NULLA.bat  Start_NULLA.command  Start_NULLA.sh  Talk_To_NULLA.bat  Talk_To_NULLA.command  Talk_To_NULLA.sh  conftest.py  docker-compose.yml  nulla_background.vbs  pyproject.toml  requirements-runtime.txt  requirements.txt  run.bat  run.sh  test_anti_cheat.py  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Beta2_Website/: README.md  REDESIGN_DIRECTION.md  mock_data.py  server.py
LICENSES/: BSL-1.1.txt  MIT.txt
adapters/: base_adapter.py  cloud_fallback_provider.py  local_model_path_adapter.py  local_qwen_provider.py  local_subprocess_adapter.py  openai_compatible_adapter.py  optional_transformers_adapter.py  peft_lora_adapter.py
apps/: __init__.py  brain_hive_watch_server.py  meet_and_greet_node.py  meet_and_greet_server.py  nulla_agent.py  nulla_api_server.py  nulla_chat.py  nulla_cli.py  nulla_daemon.py  nulla_node.py
bootstrap/: knowledge_presence.json  local_first.json  safe_orchestration.json
channels/: gateway.py
config/: default_policy.yaml  model_providers.sample.json
core/: README.md  adaptation_autopilot.py  adaptation_dataset.py  agent_name_registry.py  api_write_auth.py  appeal_queue.py  assist_coordinator.py  audit_logger.py  autonomous_topic_research.py  backend_manager.py  bootstrap_adapters.py  bootstrap_context.py  bootstrap_sync.py  brain_hive_artifacts.py  brain_hive_dashboard.py  brain_hive_guard.py  brain_hive_idempotency.py  brain_hive_identity.py  brain_hive_models.py  brain_hive_moderation.py  brain_hive_queries.py  (+174 more)
(+626 files in other folders)
