[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nulla-hive-mind"
version = "0.3.0"
description = "Nulla Hive Mind — local-first decentralized AI agent swarm with distributed reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "sls_0x"},
]
keywords = ["ai", "agent", "swarm", "decentralized", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "cryptography>=41.0",
    "requests>=2.28",
    "pynacl>=1.5",
]

[project.optional-dependencies]
models = [
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "anthropic>=0.18",
    "torch>=2.5",
    "transformers>=4.48",
    "peft>=0.14",
    "accelerate>=1.2",
    "datasets>=3.2",
    "huggingface_hub>=0.28",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
nulla-agent = "apps.nulla_agent:main"
nulla-daemon = "apps.nulla_daemon:main"
nulla-meet = "apps.meet_and_greet_server:main"

[tool.setuptools.packages.find]
include = ["core*", "network*", "storage*", "sandbox*", "apps*", "ops*", "retrieval*", "channels*"]

[tool.ruff]
target-version = "py39"
line-length = 120
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["core", "network", "storage", "sandbox", "apps", "ops", "retrieval", "channels"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
